Changelog
=========

2.0.3 - unreleased
------------------


2.0.2 - 2010-07-18
------------------

- Update license to GPL version 2 only.
  [hannosch]

2.0.1 - 2010-07-15
------------------

- Silence the `Nothing to import.` log messages.
  [hannosch]

2.0 - 2010-07-01
----------------

- Changed the registries moveResourceAfter and moveResourceBefore methods to
  gracefully handle missing destination ids. This is useful for GenericSetup
  upgrade steps to work even if the resources specified in "insert-after" or
  "insert-before" do not exist.
  [hannosch]

2.0b5 - 2010-06-13
------------------

- Avoid deprecation warnings under Zope 2.13.
  [hannosch]

- Adjusted tests to match new content-type for JavaScript in Zope 2.12.7+.
  [hannosch]

2.0b4 - 2010-06-03
------------------

- Add purge support to export/import handlers.
  [elro]

- Fix the authenticated checkbox on the kss form.
  [elro]

2.0b3 - 2010-05-01
------------------

- Add an option 'applyPrefix' to stylesheets. This can be set in the UI, in
  the various constructor methods, or as an attribute in a cssregistry.xml
  file. It defaults to false. It has no effect in debug mode. In non-debug-
  mode, however, it will parse a stylesheet for 'url()' statements that
  container *relative* paths. These will be prefixed with the Plone site path.
  If the stylesheet id contains a path (e.g. '++resource++foo/css/bar.css')
  this will be used in the prefix as well. The goal is to make relative paths
  internal to a resource directory work, even when resource merging is used.
  Previously, it'd break because resource merging changes the URL.
  [optilude]

2.0b2 - 2010-01-24
------------------

- Apply a marker interface ICookedFile to the files created on the fly for
  cooked/concatenated resources returned by ResourceRegistries. This makes
  it easier to detect these for caching purposes and treat them differently
  to in-ZODB files, which may also be instances of OFS.Image.File.
  [optilude]
