@@ -4,6 +4,8 @@ Changelog
 2.0.3 - unreleased
 ------------------
 
+- Support merging of resources that return IStreamIterators
+  [optilude]
 
 2.0.2 - 2010-07-18
 ------------------
